--- a/src/components/CameraContainer/CameraContainer.css
+++ b/src/components/CameraContainer/CameraContainer.css
@@ -1,8 +1,27 @@
+* {
+  margin:0;
+  box-sizing: border-box;
+}
+
 .camera-container {
   max-width: min(100%, 600px);
-  border: 1px solid blue;
+  width:500px;
+  height: 400px;
+  position: relative;
+  background-color: aqua;
 }
 
 #video {
-  max-width: 100%
+  width: 100%;
+  height: 400px;
+  background-color: black;
+}
+
+#overlay {
+  border: 1px solid gray;
+  position: absolute;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 400px;
 }
