--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #7e7e7e;
+    background-color: #cccccc;
   }
   a:hover {
     color: #747bff;
