--- a/src/components/CameraContainer/CameraContainer.css
+++ b/src/components/CameraContainer/CameraContainer.css
@@ -9,7 +9,7 @@
   width: 100%;
   height: 400px;
   background-color: black;
-  transform: scaleX(-1);
+  /* transform: scaleX(-1); */
 }
 
 #overlay {
