--- a/src/components/CameraContainer/CameraContainer.css
+++ b/src/components/CameraContainer/CameraContainer.css
@@ -9,7 +9,7 @@
   width: 100%;
   height: 100%;
   background-color: black;
-  transform: scaleX(-1);
+  transform: scaleX(-1); /* Both inverted */
 }
 
 #overlay {
@@ -19,6 +19,7 @@
   left:0;
   width: 100%;
   height: 400px;
+  transform: scaleX(-1); /* Both inverted */
 }
 
 .camera-container {
