--- a/src/components/CameraContainer/CameraContainer.css
+++ b/src/components/CameraContainer/CameraContainer.css
@@ -30,7 +30,7 @@ canvas#overlay {
   --main-height: 480px; /* Needs to be 480px */
   --circle-focus-height: 80%;
 
-  max-width: max(100%, 600px);
+  max-width: min(100vw, var(--main-width));
   width: var(--main-width);
   height: var(--main-height); /* Altura del padre de la .mask y .circle-focus */
   position: relative;
