--- a/src/components/CameraContainer/CameraContainer.css
+++ b/src/components/CameraContainer/CameraContainer.css
@@ -13,22 +13,34 @@
   object-fit: fill;
 }
 
+:root {
+    /* Variables */
+    --main-width: 640px;  /* Needs to be 640px */
+    --main-height: 480px; /* Needs to be 480px */
+    --circle-mask-width: 80%;
+    --mask-image-radius: calc(var(--main-width) * 0.65 / 2); /* La mitad del diámetro del .circle-focus */ 
+
+    /* Landscape phones and down */
+    @media (max-width: 480px) {
+      --mask-image-radius: calc(90vw / 2); /* La mitad del diámetro del .circle-focus */ 
+    }
+
+}
+
 canvas#overlay {
   border: 1px solid gray;
   position: absolute;
   top:0;
   left:0;
-  width: 100%;
   height: 100%;
-  border: 2px solid green;
+  /* border: 2px solid green; */
   transform: scaleX(-1); /* Both inverted */
+  max-width: min(100vw, var(--main-width));
+  width: var(--main-width);
+
 }
 
 .camera-container {
-  /* Variables */
-  --main-width: 640px;  /* Needs to be 640px */
-  --main-height: 480px; /* Needs to be 480px */
-  --circle-focus-height: 80%;
 
   max-width: min(100vw, var(--main-width));
   width: var(--main-width);
