--- a/src/components/CameraContainer/CameraContainer.css
+++ b/src/components/CameraContainer/CameraContainer.css
@@ -6,8 +6,8 @@
 
 
 #video {
-  width: 100%;
-  height: 100%;
+  width: var(--main-width);
+  height: var(--main-height);
   background-color: black;
   transform: scaleX(-1); /* Both inverted  */
   object-fit: fill;
