--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+button.custom-btn {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -45,11 +45,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+button.custom-btn:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+button.custom-btn:focus,
+button.custom-btn:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
@@ -61,7 +61,7 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
-  button {
+  button.custom-btn {
     background-color: #f9f9f9;
   }
 }
