--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
 
 
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   text-align: center;
 }
@@ -41,8 +40,7 @@
   flex-direction: column;
   align-items: center;
   gap: 2em;
+  min-height: 80vh;
+  margin: 0;
 }
 
-.read-the-docs {
-  color: #888;
-}
